CovEst is all decomposed.

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -140,7 +140,7 @@
 	author = {Alvarez, I. and Niemi, J. and Simpson, M.},
 	year = {2014},
 	keywords = {Statistics - Methodology},
-	file = {[Alvarez.2014] Bayesian inference for a covariance matrix.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. CovEstBayes/[Alvarez.2014] Bayesian inference for a covariance matrix.pdf:application/pdf}
+	file = {[Alvarez.2014] Bayesian inference for a covariance matrix.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S6. EstBayes/[Alvarez.2014] Bayesian inference for a covariance matrix.pdf:application/pdf}
 }
 
 @article{barnard_modeling_2000,
@@ -154,7 +154,7 @@
 	year = {2000},
 	keywords = {General location model, General location-scale model, Gibbs sampler, Hierarchical models, Markov chain Monte Carlo, Wishart distribution},
 	pages = {1281--1311},
-	file = {[Barnard.2000] Modeling covariance matrices in terms of standard deviations and correlations,.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. CovEstBayes/[Barnard.2000] Modeling covariance matrices in terms of standard deviations and correlations,.pdf:application/pdf}
+	file = {[Barnard.2000] Modeling covariance matrices in terms of standard deviations and correlations,.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S6. EstBayes/[Barnard.2000] Modeling covariance matrices in terms of standard deviations and correlations,.pdf:application/pdf}
 }
 
 @article{cai_adaptive_2011,
@@ -189,4 +189,116 @@
 	note = {DOI: 10.1007/978-3-662-05296-9\_31},
 	pages = {299--309},
 	file = {[Förstner_Moonen.2003] A Metric for Covariance Matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S3. Metric/[Förstner_Moonen.2003] A Metric for Covariance Matrices.pdf:application/pdf}
+}
+
+@article{donoho_wavelet_1995,
+	title = {Wavelet {Shrinkage}: {Asymptopia}?},
+	volume = {57},
+	issn = {00359246},
+	url = {http://www.jstor.org/stable/2345967},
+	abstract = {Much recent effort has sought asymptotically minimax methods for recovering infinite dimensional objects–curves, densities, spectral densities, images–from noisy data. A now rich and complex body of work develops nearly or exactly minimax estimators for an array of interesting problems. Unfortunately, the results have rarely moved into practice, for a variety of reasons–among them being similarity to known methods, computational intractability and lack of spatial adaptivity. We discuss a arise from iterated mappings of the centre of the interval to which the map is applied. Particular attention is paid to the shape of an invariant distribution in the tails or in the neighbourhood of a pole of its density. A new technique is developed for this application. It enables us to combine `parametric' information, available from the structure of the map, with `nonparametric' information obtainable from numerical experiments.},
+	number = {2},
+	journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+	author = {Donoho, David L. and Johnstone, Iain M. and Kerkyacharian, Gerard and Picard, Dominique},
+	year = {1995},
+	pages = {301--369},
+	file = {[Donoho.1995] Wavelet Shrinkage.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Donoho.1995] Wavelet Shrinkage.pdf:application/pdf}
+}
+
+@article{antoniadis_regularization_2001,
+	title = {Regularization of {Wavelet} {Approximations}},
+	volume = {96},
+	issn = {0162-1459, 1537-274X},
+	url = {http://www.tandfonline.com/doi/abs/10.1198/016214501753208942},
+	doi = {10.1198/016214501753208942},
+	language = {en},
+	number = {455},
+	urldate = {2018-02-11},
+	journal = {Journal of the American Statistical Association},
+	author = {Antoniadis, Anestis and Fan, Jianqing},
+	month = sep,
+	year = {2001},
+	pages = {939--967},
+	file = {[Antoniadis_Fan.2001] Regularization of Wavelet Approximations.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Antoniadis_Fan.2001] Regularization of Wavelet Approximations.pdf:application/pdf}
+}
+
+@article{fan_variable_2001,
+	title = {Variable {Selection} via {Nonconcave} {Penalized} {Likelihood} and {Its} {Oracle} {Properties}},
+	volume = {96},
+	issn = {01621459},
+	url = {http://www.jstor.org/stable/3085904},
+	abstract = {Variable selection is fundamental to high-dimensional statistical modeling, including nonparametric regression. Many approaches in use are stepwise selection procedures, which can be computationally expensive and ignore stochastic errors in the variable selection process. In this article, penalized likelihood approaches are proposed to handle these kinds of problems. The proposed methods select variables and estimate coefficients simultaneously. Hence they enable us to construct confidence intervals for estimated parameters. The proposed approaches are distinguished from others in that the penalty functions are symmetric, nonconcave on (0, ∞), and have singularities at the origin to produce sparse solutions. Furthermore, the penalty functions should be bounded by a constant to reduce bias and satisfy certain conditions to yield continuous solutions. A new algorithm is proposed for optimizing penalized likelihood functions. The proposed ideas are widely applicable. They are readily applied to a variety of parametric models such as generalized linear models and robust regression models. They can also be applied easily to nonparametric modeling by using wavelets and splines. Rates of convergence of the proposed penalized likelihood estimators are established. Furthermore, with proper choice of regularization parameters, we show that the proposed estimators perform as well as the oracle procedure in variable selection; namely, they work as well as if the correct submodel were known. Our simulation shows that the newly proposed methods compare favorably with other variable selection techniques. Furthermore, the standard error formulas are tested to be accurate enough for practical applications.},
+	number = {456},
+	journal = {Journal of the American Statistical Association},
+	author = {Fan, Jianqing and Li, Runze},
+	year = {2001},
+	pages = {1348--1360},
+	file = {[Fan_Li.2001] Variable Selection via Nonconcave Penalized Likelihood and Its Oracle Properties.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Fan_Li.2001] Variable Selection via Nonconcave Penalized Likelihood and Its Oracle Properties.pdf:application/pdf}
+}
+
+@article{antoniadis_wavelets_1997,
+	title = {Wavelets in statistics: {A} review},
+	volume = {6},
+	issn = {1613-981X},
+	url = {https://doi.org/10.1007/BF03178905},
+	doi = {10.1007/BF03178905},
+	abstract = {The field of nonparametric function estimation has broadened its appeal in recent years with an array of new tools for statistical analysis. In particular, theoretical and applied research on the field of wavelets has had noticeable influence on statistical topics such as nonparametric regression, nonparametric density estimation, nonparametric discrimination and many other related topics. This is a survey article that attempts to synthetize a broad variety of work on wavelets in statistics and includes some recent developments in nonparametric curve estimation that have been omitted from review articles and books on the subject. After a short introduction to wavelet theory, wavelets are treated in the familiar context of estimation of «smooth» functions. Both «linear» and «nonlinear» wavelet estimation methods are discussed and cross-validation methods for choosing the smoothing parameters are addressed. Finally, some areas of related research are mentioned, such as hypothesis testing, model selection, hazard rate estimation for censored data, and nonparametric change-point problems. The closing section formulates some promising research directions relating to wavelets in statistics.},
+	number = {2},
+	journal = {Journal of the Italian Statistical Society},
+	author = {Antoniadis, A.},
+	month = aug,
+	year = {1997},
+	pages = {97},
+	file = {[Antoniadis.1997] Wavelets in statistics.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Antoniadis.1997] Wavelets in statistics.pdf:application/pdf}
+}
+
+@article{zhang_nearly_2010,
+	title = {Nearly unbiased variable selection under minimax concave penalty},
+	volume = {38},
+	issn = {0090-5364},
+	url = {http://projecteuclid.org/euclid.aos/1266586618},
+	doi = {10.1214/09-AOS729},
+	language = {en},
+	number = {2},
+	urldate = {2018-02-11},
+	journal = {The Annals of Statistics},
+	author = {Zhang, Cun-Hui},
+	month = apr,
+	year = {2010},
+	pages = {894--942},
+	file = {[Zhang.2010] Nearly unbiased variable selection under minimax concave penalty.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Zhang.2010] Nearly unbiased variable selection under minimax concave penalty.pdf:application/pdf}
+}
+
+@article{fan_large_2013,
+	title = {Large covariance estimation by thresholding principal orthogonal complements},
+	volume = {75},
+	issn = {13697412},
+	url = {http://doi.wiley.com/10.1111/rssb.12016},
+	doi = {10.1111/rssb.12016},
+	language = {en},
+	number = {4},
+	urldate = {2018-02-12},
+	journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+	author = {Fan, Jianqing and Liao, Yuan and Mincheva, Martina},
+	month = sep,
+	year = {2013},
+	pages = {603--680},
+	file = {[Fan.2013] Large covariance estimation by thresholding principal orthogonal complements.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Fan.2013] Large covariance estimation by thresholding principal orthogonal complements.pdf:application/pdf}
+}
+
+@article{qi_quadratically_2006,
+	title = {A {Quadratically} {Convergent} {Newton} {Method} for {Computing} the {Nearest} {Correlation} {Matrix}},
+	volume = {28},
+	issn = {0895-4798, 1095-7162},
+	url = {http://epubs.siam.org/doi/10.1137/050624509},
+	doi = {10.1137/050624509},
+	language = {en},
+	number = {2},
+	urldate = {2018-02-12},
+	journal = {SIAM Journal on Matrix Analysis and Applications},
+	author = {Qi, Houduo and Sun, Defeng},
+	month = jan,
+	year = {2006},
+	pages = {360--385},
+	file = {[Qi_Sun.2006] A Quadratically Convergent Newton Method for Computing the Nearest Correlation.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Qi_Sun.2006] A Quadratically Convergent Newton Method for Computing the Nearest Correlation.pdf:application/pdf}
 }
