precision is being separated !

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -302,3 +302,49 @@
 	pages = {360--385},
 	file = {[Qi_Sun.2006] A Quadratically Convergent Newton Method for Computing the Nearest Correlation.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S1. CovEst/[Qi_Sun.2006] A Quadratically Convergent Newton Method for Computing the Nearest Correlation.pdf:application/pdf}
 }
+
+@article{yuan_model_2007,
+	title = {Model {Selection} and {Estimation} in the {Gaussian} {Graphical} {Model}},
+	volume = {94},
+	issn = {00063444},
+	url = {http://www.jstor.org/stable/20441351},
+	abstract = {We propose penalized likelihood methods for estimating the concentration matrix in the Gaussian graphical model. The methods lead to a sparse and shrinkage estimator of the concentration matrix that is positive definite, and thus conduct model selection and estimation simultaneously. The implementation of the methods is nontrivial because of the positive definite constraint on the concentration matrix, but we show that the computation can be done effectively by taking advantage of the efficient maxdet algorithm developed in convex optimization. We propose a BIC-type criterion for the selection of the tuning parameter in the penalized likelihood methods. The connection between our methods and existing methods is illustrated. Simulations and real examples demonstrate the competitive performance of the new methods.},
+	number = {1},
+	journal = {Biometrika},
+	author = {Yuan, Ming and Lin, Yi},
+	year = {2007},
+	pages = {19--35},
+	file = {[Yuan_Lin.2007] Model Selection and Estimation in the Gaussian Graphical Model.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Yuan_Lin.2007] Model Selection and Estimation in the Gaussian Graphical Model.pdf:application/pdf}
+}
+
+@article{friedman_sparse_2008,
+	title = {Sparse inverse covariance estimation with the graphical lasso},
+	volume = {9},
+	issn = {1465-4644, 1468-4357},
+	url = {https://academic.oup.com/biostatistics/article-lookup/doi/10.1093/biostatistics/kxm045},
+	doi = {10.1093/biostatistics/kxm045},
+	language = {en},
+	number = {3},
+	urldate = {2018-02-12},
+	journal = {Biostatistics},
+	author = {Friedman, J. and Hastie, T. and Tibshirani, R.},
+	month = jul,
+	year = {2008},
+	pages = {432--441},
+	file = {[Friedman.2008] Sparse inverse covariance estimation with the graphical lasso.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Friedman.2008] Sparse inverse covariance estimation with the graphical lasso.pdf:application/pdf}
+}
+
+@inproceedings{banerjee_convex_2006,
+	title = {Convex optimization techniques for fitting sparse {Gaussian} graphical models},
+	isbn = {978-1-59593-383-6},
+	url = {http://portal.acm.org/citation.cfm?doid=1143844.1143856},
+	doi = {10.1145/1143844.1143856},
+	language = {en},
+	urldate = {2018-02-12},
+	booktitle = {Proceedings of the 23rd international conference on {Machine} learning},
+	publisher = {ACM Press},
+	author = {Banerjee, Onureena and Ghaoui, Laurent El and d'Aspremont, Alexandre and Natsoulis, Georges},
+	year = {2006},
+	pages = {89--96},
+	file = {[Banerjee.2006] Convex optimization techniques for fitting sparse Gaussian graphical models.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Banerjee.2006] Convex optimization techniques for fitting sparse Gaussian graphical models.pdf:application/pdf}
+}
