banded1 and banded2 need documnetation !!

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -348,3 +348,29 @@
 	pages = {89--96},
 	file = {[Banerjee.2006] Convex optimization techniques for fitting sparse Gaussian graphical models.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Banerjee.2006] Convex optimization techniques for fitting sparse Gaussian graphical models.pdf:application/pdf}
 }
+
+@article{banerjee_posterior_2014,
+	title = {Posterior convergence rates for estimating large precision matrices using graphical models},
+	volume = {8},
+	issn = {1935-7524},
+	url = {http://projecteuclid.org/euclid.ejs/1414588188},
+	doi = {10.1214/14-EJS945},
+	language = {en},
+	number = {2},
+	urldate = {2018-02-13},
+	journal = {Electronic Journal of Statistics},
+	author = {Banerjee, Sayantan and Ghosal, Subhashis},
+	year = {2014},
+	pages = {2111--2137},
+	file = {[Banerjee_Ghosal.2014] Posterior convergence rates for estimating large precision matrices using.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Banerjee_Ghosal.2014] Posterior convergence rates for estimating large precision matrices using.pdf:application/pdf}
+}
+
+@article{lee_estimating_2017,
+	title = {Estimating {Large} {Precision} {Matrices} via {Modified} {Cholesky} {Decomposition}},
+	journal = {ArXiv e-prints},
+	author = {Lee, K. and Lee, J.},
+	month = jul,
+	year = {2017},
+	keywords = {Mathematics - Statistics Theory},
+	file = {[Lee_Lee.2017] Estimating Large Precision Matrices via Modified Cholesky Decomposition.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Lee_Lee.2017] Estimating Large Precision Matrices via Modified Cholesky Decomposition.pdf:application/pdf}
+}
