updated to version 0.3.0;

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -374,3 +374,37 @@
 	keywords = {Mathematics - Statistics Theory},
 	file = {[Lee_Lee.2017] Estimating Large Precision Matrices via Modified Cholesky Decomposition.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Lee_Lee.2017] Estimating Large Precision Matrices via Modified Cholesky Decomposition.pdf:application/pdf}
 }
+
+@article{an_hypothesis_2014,
+	title = {Hypothesis testing for band size detection of high-dimensional banded precision matrices},
+	volume = {101},
+	issn = {0006-3444, 1464-3510},
+	url = {https://academic.oup.com/biomet/article-lookup/doi/10.1093/biomet/asu006},
+	doi = {10.1093/biomet/asu006},
+	language = {en},
+	number = {2},
+	urldate = {2018-02-18},
+	journal = {Biometrika},
+	author = {An, B. and Guo, J. and Liu, Y.},
+	month = jun,
+	year = {2014},
+	pages = {477--483},
+	file = {[An.2014] Hypothesis testing for band size detection of high-dimensional banded precision.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[An.2014] Hypothesis testing for band size detection of high-dimensional banded precision.pdf:application/pdf}
+}
+
+@article{bickel_regularized_2008,
+	title = {Regularized estimation of large covariance matrices},
+	volume = {36},
+	issn = {0090-5364},
+	url = {http://projecteuclid.org/euclid.aos/1201877299},
+	doi = {10.1214/009053607000000758},
+	language = {en},
+	number = {1},
+	urldate = {2018-02-18},
+	journal = {The Annals of Statistics},
+	author = {Bickel, Peter J. and Levina, Elizaveta},
+	month = feb,
+	year = {2008},
+	pages = {199--227},
+	file = {[Bickel_Levina.2008] Regularized estimation of large covariance matrices.pdf:/home/kisung/Dropbox/V3. Statistics/P2. Covariance/S2. PreEst/[Bickel_Levina.2008] Regularized estimation of large covariance matrices.pdf:application/pdf}
+}
